--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next": "13.2.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-select": "^5.7.3"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.3.0"
