--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "next": "13.2.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-collapse": "^5.1.1",
+    "react-collapsed": "^4.0.2",
     "react-dom": "18.2.0",
     "react-select": "^5.7.3"
   },
